--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "less-loader": "^11.1.0",
     "style-loader": "^3.3.2",
     "webpack": "^5.76.3",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.1"
   }
 }
