--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
-    "html-webpack-plugin": "^5.5.0",
     "less-loader": "^11.1.0",
     "style-loader": "^3.3.2",
     "webpack": "^5.76.3",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.1"
+    "webpack-cli": "^5.0.1"
   }
 }
