--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "canvas utils",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --config webpack.config.js --watch"
+    "dev": "webpack serve"
   },
   "keywords": [
     "canvas",
@@ -17,9 +17,10 @@
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
-    "less-loader": "^11.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.2",
     "webpack": "^5.76.3",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.1"
   }
 }
